[tool.poetry]
name = "bentoml-docker"
version = "0.1.0"
description = "BentoML's Docker Images Management"
authors = ["BentoML Contributors <contact@bentoml.ai>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
docker = "^5.0.0"
Jinja2 = "^3.0.1"
absl-py = "^0.13.0"
Cerberus = "^1.3.4"
"ruamel.yaml" = "^0.17.9"
glom = "^20.11.0"
python-dotenv = "^0.18.0"
GitPython = "^3.1.18"
"backports.cached-property" = "^1.0.1"
plumbum = "^1.7.2"
attrs = "^21.4.0"


[tool.poetry.dev-dependencies]
black = "22.1.0"
isort = "^5.9.1"
pylint = "^2.8.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
