load("@rules_proto_grpc//cpp:defs.bzl", "cc_grpc_library")

cc_grpc_library(
    name = "v1alpha1_grpc_lib",
    protos = ["//:v1alpha1_proto"],
    well_known_protos = True,
)

cc_binary(
    name = "client_v1alpha1",
    srcs = ["v1alpha1/client.cc"],
    deps = [
        ":v1alpha1_grpc_lib",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_grpc_library(
    name = "v1_grpc_lib",
    protos = ["//:v1_proto"],
    well_known_protos = True,
)

cc_binary(
    name = "client_v1",
    srcs = ["v1/client.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":v1_grpc_lib",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
