load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_grpc_library(
    name = "v1alpha1_grpc_lib",
    importpath = "github.com/bentoml/bentoml/grpc/v1alpha1",
    protos = ["//:v1alpha1_proto"],
)

go_binary(
    name = "client_v1alpha1",
    srcs = ["v1alpha1/client.go"],
    importpath = "github.com/bentoml/bentoml/grpc/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        ":v1alpha1_grpc_lib",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)

go_grpc_library(
    name = "v1_grpc_lib",
    importpath = "github.com/bentoml/bentoml/grpc/v1",
    protos = ["//:v1_proto"],
)

go_binary(
    name = "client_v1",
    srcs = ["v1/client.go"],
    importpath = "github.com/bentoml/bentoml/grpc/v1",
    visibility = ["//visibility:public"],
    deps = [
        ":v1_grpc_lib",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)
