load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

alias(
    name = "v1alpha1_proto",
    actual = "//src/bentoml/grpc/v1alpha1:service_proto",
)

java_proto_library(
    name = "v1alpha1_proto_lib",
    deps = [":v1alpha1_proto"],
)

java_grpc_library(
    name = "v1alpha1_grpc_lib",
    srcs = [":v1alpha1_proto"],
    deps = [":v1alpha1_proto_lib"],
)

java_library(
    name = "grpc_library_v1alpha1",
    srcs = glob(["src/main/java/v1alpha1/**/*.java"]),
    deps = [
        ":v1alpha1_grpc_lib",
        ":v1alpha1_proto_lib",
        "@io_grpc_grpc_java//api",
    ],
)

java_binary(
    name = "client_v1alpha1",
    main_class = "com.client.BentoServiceClient",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":grpc_library_v1alpha1",
        "@io_grpc_grpc_java//netty",
    ],
)

alias(
    name = "v1_proto",
    actual = "//src/bentoml/grpc/v1:service_proto",
)

java_proto_library(
    name = "v1_proto_lib",
    deps = [":v1_proto"],
)

java_grpc_library(
    name = "v1_grpc_lib",
    srcs = [":v1_proto"],
    deps = [":v1_proto_lib"],
)

java_library(
    name = "grpc_library_v1",
    srcs = glob(["src/main/java/v1/**/*.java"]),
    deps = [
        ":v1_grpc_lib",
        ":v1_proto_lib",
        "@io_grpc_grpc_java//api",
    ],
)

java_binary(
    name = "client_v1",
    main_class = "com.client.BentoServiceClient",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":grpc_library_v1",
        "@io_grpc_grpc_java//netty",
    ],
)
