load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

alias(
    name = "v1alpha1_proto",
    actual = "//src/bentoml/grpc/v1alpha1:service_proto",
)

kt_jvm_proto_library(
    name = "v1alpha1_proto_lib",
    deps = [":v1alpha1_proto"],
)

kt_jvm_grpc_library(
    name = "v1alpha1_grpc_lib",
    srcs = [":v1alpha1_proto"],
    deps = [":v1alpha1_proto_lib"],
)

kt_jvm_binary(
    name = "client_v1alpha1",
    srcs = ["src/main/kotlin/v1alpha1/com/client/BentoServiceClient.kt"],
    main_class = "com.client.BentoServiceClient",
    visibility = ["//visibility:public"],
    deps = [
        ":v1alpha1_grpc_lib",
        ":v1alpha1_proto_lib",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//netty",
    ],
)

alias(
    name = "v1_proto",
    actual = "//src/bentoml/grpc/v1:service_proto",
)

kt_jvm_proto_library(
    name = "v1_proto_lib",
    deps = [":v1_proto"],
)

kt_jvm_grpc_library(
    name = "v1_grpc_lib",
    srcs = [":v1_proto"],
    deps = [":v1_proto_lib"],
)

kt_jvm_binary(
    name = "client_v1",
    srcs = ["src/main/kotlin/v1/com/client/BentoServiceClient.kt"],
    main_class = "com.client.BentoServiceClient",
    visibility = ["//visibility:public"],
    deps = [
        ":v1_grpc_lib",
        ":v1_proto_lib",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//netty",
    ],
)
