[package]
name = "rust-grpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
prost-build = "0.11.9"
tonic-build = "0.9.2"

[[bin]]
name = "client-v1"
path = "src/v1/main.rs"

[[bin]]
name = "client-v1alpha1"
path = "src/v1alpha1/main.rs"
