load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_grpc_library(
    name = "service_grpc_v1alpha1",
    importpath = "github.com/bentoml/bentoml/grpc/v1alpha1",
    protos = ["//:service_v1alpha1_proto"],
)

go_binary(
    name = "client_v1alpha1",
    srcs = ["client.go"],
    importpath = "github.com/bentoml/bentoml/grpc/v1alpha1",
    deps = [
        ":service_grpc_v1alpha1",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)

go_grpc_library(
    name = "service_grpc",
    importpath = "github.com/bentoml/bentoml/grpc/v1",
    protos = ["//:service_v1_proto"],
)

go_binary(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/bentoml/bentoml/grpc/v1",
    deps = [
        ":service_grpc",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)
