load("@rules_proto_grpc//swift:defs.bzl", "swift_grpc_library")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_proto_library")

swift_grpc_library(
    name = "BentoServiceModel",
    protos = ["//:service_v1alpha1_proto"],
)

swift_binary(
    name = "client",
    srcs = ["Sources/BentoServiceClient/main.swift"],
    defines = ["BAZEL_BUILD"],
    deps = [
        ":BentoServiceModel",
        "//:service_v1alpha1_proto",
    ],
)
